--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Talita e Ana Beatriz",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.2",
     "jest": "^29.7.0",
     "uuid": "^9.0.1"
   }
